Adicionando telas navegáveis com Thymeleaf